# AniEn

./: .gitignore  README.md  image_process.py  main.py  pyproject.toml
.github/: copilot-instructions.md
ui/: README.md  pubspec.yaml
ui/android/app/: build.gradle.kts
ui/android/app/src/main/: AndroidManifest.xml
ui/android/app/src/main/kotlin/com/example/anime_engine_app_ui/: MainActivity.kt
ui/ios/Runner/: Info.plist
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart  node.dart  theme.dart  timeline.dart  timeline_structure_json.dart  videoplayer.dart  webrtc.dart
ui/lib/timeline/: timeline.dart
ui/lib/timeline/providers/: data_models.dart  timeline_provider.dart
ui/lib/timeline/screens/: bar.dart  mainview.dart  timeline.dart
ui/linux/: CMakeLists.txt
ui/linux/runner/: my_application.cc
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/macos/Runner/Configs/: AppInfo.xcconfig
ui/test/: widget_test.dart
ui/web/: index.html  manifest.json
ui/windows/: CMakeLists.txt
ui/windows/runner/: Runner.rc  main.cpp
