[project]
name = "anien"
version = "0.1.0"
description = "A prototype video editing application."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp-middlewares>=2.4.0",
    "aiohttp>=3.11.14",
    "aiortc>=1.10.1",
    "numpy>=2.2.3",
    "opengl-image-process-util",
    "openimageio>=3.0.3.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.7",
]

[tool.uv.sources]
opengl-image-process-util = { git = "https://github.com/Hashory/opengl_image_process_util.git" }

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
line-ending = "auto"
